Changes in the header

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,8 +12,9 @@ html
     meta(charset='utf-8')
 
   body
+    section#header-container
     section#main-container
-      
+
     script(src='https://code.jquery.com/jquery-2.2.3.min.js', integrity='sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
     script(type='text/javascript', src='js/app.js')
