--- a/styles/app.scss
+++ b/styles/app.scss
@@ -4,6 +4,16 @@ $primary-color: #4090db;
 $secondary-color: #409fff;
 $facebook-color: #3b5998;
 
+@mixin prefix($property, $value, $vendors: webkit moz ms o) {
+  @if $vendors {
+    @each $vendor in $vendors {
+      #{"-" + $vendor + "-" + $property}: #{$value};
+    }
+  }
+  #{$property}: #{$value};
+}
+
+
 * {
   margin: 0;
   padding: 0;
@@ -138,6 +148,52 @@ li a { color: $primary-color !important; }
       cursor: pointer;
       opacity: 0;
       filter: alpha(opacity=0);
+    }
+  }
+}
+
+.user-page {
+  margin-top: 30px;
+  .heading {
+    margin-bottom: 20px;
+  }
+  .picture-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    position: relative;
+    &:hover {
+      .picture {
+        @include prefix(filter, blur(5px) grayscale(100%));
+      }
+      .likes {
+        display: flex;
+      }
+    }
+    .picture {
+      margin-bottom: 20px;
+      display: block;
+      max-width: 100%;
+      max-height: 100%;
+    }
+    .likes {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      color: red;
+      font-size: 34px;
+      display: none
+    }
+    .fa-heart {
+      margin-right: 8px;
+      display: inline-block;
     }
   }
 }
