--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,7 @@ html
     meta(charset='utf-8')
 
   body
+    section#loader-container
     section#header-container
     section#main-container
 
