--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ html
     title Emagram
     link(href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet')
-    link(rel='stylesheet' href='fonts/font-awesome.min.css')
+    link(rel='stylesheet' href='font-awesome.min.css')
     link(type='text/css' rel='stylesheet' href='css/app.css'  media='screen,projection')
     link(rel="shortcut icon" href="apple-icon-60x60.png" type="image/x-icon")
     link(rel="icon" href="apple-icon-60x60.png" type="image/x-icon")
@@ -15,6 +15,6 @@ html
     section#header-container
     section#main-container
 
-    script(src='https://code.jquery.com/jquery-2.2.3.min.js', integrity='sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=', crossorigin='anonymous')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
-    script(type='text/javascript', src='js/app.js')
+  script(src='https://code.jquery.com/jquery-2.2.3.min.js', integrity='sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=', crossorigin='anonymous')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
+  script(type='text/javascript', src='js/app.js')
