--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,12 @@
 html
   head
-    title Emagram
-    link(href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet')
-    link(href='https://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet')
-    link(rel='stylesheet' href='font-awesome.min.css')
-    link(type='text/css' rel='stylesheet' href='css/app.css'  media='screen,projection')
+    title=Emagram
+    link(href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' rel='stylesheet' type='text/css')
+    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
+    link(rel='stylesheet' type='text/css' href='/app.css')
     link(rel="shortcut icon" href="apple-icon-60x60.png" type="image/x-icon")
     link(rel="icon" href="apple-icon-60x60.png" type="image/x-icon")
+    meta(name='theme-color', content='#ffffff')
 
     meta(name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no')
     meta(charset='utf-8')
@@ -14,7 +14,6 @@ html
   body
     section#header-container
     section#main-container
-
-  script(src='https://code.jquery.com/jquery-2.2.3.min.js', integrity='sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=', crossorigin='anonymous')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
-  script(type='text/javascript', src='js/app.js')
+    script(src='https://code.jquery.com/jquery-2.2.3.min.js', integrity='sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
+    script(type='application/javascript' src='/bundle.js')
