--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,8 @@ doctype html
 html
   head
     link(href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' rel='stylesheet' type='text/css')
-    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
-    link(rel='stylesheet' type='text/css' href='/app.css')
+    link(rel='stylesheet' rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
+    link(rel='stylesheet' rel='stylesheet' type='text/css' href='/app.css')
     link(rel="shortcut icon" href="apple-icon-60x60.png" type="image/x-icon")
     link(rel="icon" href="apple-icon-60x60.png" type="image/x-icon")
     meta(name='theme-color', content='#ffffff')
