--- a/views/index.pug
+++ b/views/index.pug
@@ -2,12 +2,11 @@ doctype html
 html
   head
     link(rel='stylesheet' type='text/css' href='/app.css')
-    link(href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' rel='stylesheet' type='text/css')
-    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
-    link(rel="shortcut icon" href="apple-icon-60x60.png" type="image/x-icon")
-    link(rel="icon" href="apple-icon-60x60.png" type="image/x-icon")
+    link(rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' type='text/css')
+    link(rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
+    link(rel="icon" type="image/x-icon" href="apple-icon-60x60.png")
+    link(rel="shortcut icon" type="image/x-icon" href="apple-icon-60x60.png")
     meta(name='theme-color', content='#ffffff')
-
     meta(name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no')
     meta(charset='utf-8')
 
