--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     link(rel='stylesheet' type='text/css' href='/app.css')
-    link(rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script' type='text/css')
+    link(rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script')
     link(rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
     link(rel="icon" type="image/x-icon" href="apple-icon-60x60.png")
     link(rel="shortcut icon" type="image/x-icon" href="apple-icon-60x60.png")
