--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,12 @@
 doctype html
 html
   head
+    title Emagram
     meta(charset='utf-8')
-    link(rel='stylesheet' type='text/css' href='./app.css')
-    link(rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script')
-    link(rel='stylesheet' type='text/css' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
-    link(rel="icon" type="image/x-icon" href="apple-icon-60x60.png")
+    link(rel='stylesheet'    type='text/css'     href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script')
+    link(rel='stylesheet'    type='text/css'     href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
+    link(rel='stylesheet'    type='text/css'     href='./app.css')
+    link(rel="icon"          type="image/x-icon" href="apple-icon-60x60.png")
     link(rel="shortcut icon" type="image/x-icon" href="apple-icon-60x60.png")
     meta(name='theme-color', content='#ffffff')
     meta(name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no')
