--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Emagram
+    title Emagram - Photos
     meta(charset='utf-8')
     link(rel='stylesheet'    type='text/css'     href='https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script')
     link(rel='stylesheet'    type='text/css'     href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
